--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             cursor: pointer;
         }
 
+        /* Add a hover effect for better user interaction */
+        button:hover {
+            background-color: #45a049; /* Change to the desired hover color */
+        }
+
         input[type=text] {
             padding: 10px;
             border: 1px solid #ccc;
